# openenv-bioreactor

./: .dockerignore  .gitattributes  .gitignore  Blog.md  Dockerfile  README.md  ROUND1_HANDOFF.md  ROUND2_instructions.md  SUBMISSION_INSTRUCTIONS.md  __init__.py  app.py  bioreactor_env.py  client.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  tasks.py
IndPenSim/: Generate_Production_Batch_data_V4.m
baselines/: __init__.py  claude_zero_shot_agent.py  fixed_recipe_agent.py  random_agent.py  rule_based_agent.py  trained_qwen_agent.py  untrained_qwen_agent.py
bioperator_env/: __init__.py  alarms.py  env.py  models.py  prompt.py  rewards.py  scenarios.py  trends.py
notebooks/: 01_env_smoke_test.ipynb  02_baselines.ipynb  03_train_grpo.ipynb  04_demo.ipynb
results/: baseline_claude_zero_shot.csv  baseline_fixed_recipe.csv  baseline_random.csv  baseline_rule_based.csv
scripts/: calibrate_against_matlab.py  fetch_training_artifacts.py  generate_plots.py  run_baselines.py  validate-submission.sh
server/: Dockerfile  __init__.py  app.py
tests/: conftest.py  test_baselines.py  test_env_loop.py  test_models.py  test_plant_calibration.py  test_plant_controllers.py  test_plant_disturbances.py  test_plant_engine.py  test_plant_ode_smoke.py  test_plant_params.py  test_plant_recipe.py  test_rewards.py  test_scenarios_prompt.py  test_server.py  test_smoke.py  test_training.py  test_trends_alarms.py
training/: README.md  __init__.py  bootstrap_and_train.sh  grpo_train.py  reward_fn.py  rollout.py  (+1 more)
(+12 files in other folders)
