[project]
name = "bioperator-env"
version = "0.1.0"
description = "BioOperatorEnv: a flight simulator for autonomous bioreactor operators"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [{ name = "Kartikey" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.0",
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "matplotlib>=3.8",
    "tqdm>=4.66",
]

[project.optional-dependencies]
training = [
    "torch>=2.3",
    "transformers>=4.44",
    "peft>=0.11",
    "trl>=0.10",
    "bitsandbytes>=0.43",
    "accelerate>=0.30",
    "datasets>=2.20",
    "wandb>=0.17",
]
inference = [
    "openai>=1.30",
    "anthropic>=0.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bioperator_env"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["ignore::DeprecationWarning"]
